# NeMo-speech-data-processor

./: .envrc.example  .gitignore  README.md  pyproject.toml
dataset_configs/multilingual/granary/: config.yaml  ej_au_webdataset_pipeline.yaml  ej_au_webdataset_pipeline_simple.yaml  granary_vox.yaml  granary_vox_speaker.yaml
dataset_configs/vox/: config.yaml
dataset_configs/vox_pipeline/: config.yaml  config_de_qwen.yaml  config_ej.yaml  config_pl.yaml  config_pl_gemini.yaml  config_pl_gemini_from_qwen.yaml  config_pl_qwen.yaml  extract_bk_menu_vocabulary.py  menu_vocabulary.json
dataset_configs/vox_pipeline/granary/: config.yaml  config_pl.yaml  config_pl_gemini.yaml  config_pl_gemini_from_qwen.yaml  config_pl_qwen.yaml  config_reordered.yaml  extract_menu_vocabulary.py
dataset_configs/vox_pipeline/partials/: polish_whisper_corrections.yaml
docs/: proposal.md  vox_pipeline.md
run/: generate_manifest.sh  run_german_pipeline_qwen_full.sh  run_pipeline.sh  run_polish_pipeline_gemini_from_qwen.sh  run_polish_pipeline_gemini_full.sh  run_polish_pipeline_qwen_full.sh  run_vox_pipeline.sh  run_vox_pipeline_pl.sh  upload_dataset.sh  upload_to_hf.sh  upload_webdataset_to_hf.sh
scripts/: push_webdataset_to_hf.py
sdp/processors/: __init__.py  convert_to_webdataset.py  copy_file.py  create_initial_manifest.py  create_structured_dataset.py  create_webdataset.py  cross_channel_validation.py  enhanced_cross_channel_validation.py  flexible_field_keeper.py  gemini_audio_correction.py  menu_aware_correction.py
sdp/processors/manage_files/: __init__.py  (+1 more)
(+23 files in other folders)
