[project]
name = "nemo-speech-data-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=15.0.0",
    "diff-match-patch>=20241021",
    "editdistance>=0.8.1",
    "faster-whisper>=1.2.0",
    "fasttext>=0.9.3",
    "gdown>=5.2.0",
    "google-genai>=1.33.0",
    "gradio>=5.44.1",
    "jiwer>=4.0.0",
    "lhotse>=1.30.3",
    "librosa>=0.11.0",
    "nemo-toolkit[common]==2.2.1",
    "nvidia-cublas-cu12>=12.6.4.1",
    "nvidia-cudnn-cu12==9.*",
    "optree>=0.13.0",
    "pandas>=2.3.2",
    "pydub>=0.25.1",
    "pymarian>=1.12.42",
    "python-docx>=1.2.0",
    "pytorch-lightning>=2.5.3",
    "rapidfuzz>=3.14.0",
    "rarfile>=4.2",
    "sox>=1.5.0",
    "termplotlib>=0.3.9",
    "torchaudio>=2.7.1",
    "torchcodec>=0.6.0",
    "vllm>=0.10.1.1",
    "webvtt-py>=0.5.1",
]

[tool.uv]
override-dependencies = [
    "transformers>=4.48.0,<4.56.0",
    "numba>=0.61.0,<0.62.0",
]
